--- a/pages/fruits/apple.html
+++ b/pages/fruits/apple.html
@@ -11,6 +11,7 @@
 -->
 
   <section>
-    this is apple page
-    from it link to apple is broken
+    <strong>apple</strong> page
+    <br />
+    from which the link to apple is broken
   </section>
