publications and team

--- a/pages/team.html
+++ b/pages/team.html
@@ -1,6 +1,6 @@
 <!--
 .. title: Home
-.. slug: apple
+.. slug: index
 .. date: 2018-06-01 09:39:34 UTC
 .. tags:
 .. category:
@@ -11,7 +11,7 @@
 -->
 
   <section>
-    <strong>apple</strong> page
-    <br />
-    from which the link to apple is broken
+    <h1>
+        Fast and cost-effective deep learning algorithm platform for video processing in social infrastructure
+    </h1>
   </section>
