--- a/pages/index.html
+++ b/pages/index.html
@@ -11,5 +11,7 @@
 -->
 
   <section>
-    <strong>title</strong> page
+    <h1>
+        Fast and cost-effective deep learning algorithm platform for video processing in social infrastructure
+    </h1>
   </section>
