--- a/pages/team.html
+++ b/pages/team.html
@@ -1,7 +1,7 @@
 <!--
 .. title: Home
-.. slug: index
-.. date: 2018-06-01 09:39:34 UTC
+.. slug: team
+.. date: 2018-07-01 09:39:34 UTC
 .. tags:
 .. category:
 .. link:
@@ -12,6 +12,39 @@
 
   <section>
     <h1>
-        Fast and cost-effective deep learning algorithm platform for video processing in social infrastructure
+        Project Members:
     </h1>
-  </section>
+<table class="table">
+  <!--thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr-->
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Koichi Shinoda</th>
+      <td>Principal Investigator</td>
+      <td>Tokyo Institute of Technology</td>
+    </tr>
+    <tr>
+      <th scope="row">Satoshi Matsuoka</th>
+      <td>Co-Investigator</td>
+      <td>Tokyo Institute of Technology / Riken R-CCS</td>
+    </tr>
+    <tr>
+      <th scope="row">Tsuyoshi Murata</th>
+      <td>Co-Investigator</td>
+      <td>Tokyo Institute of Technology</td>
+    </tr>
+    <tr>
+      <th scope="row">Rio Yokota</th>
+      <td>Co-Investigator</td>
+      <td>Tokyo Institute of Technology</td>
+    </tr>
+  </tbody>
+</table>
+
+</section>
