poster session program

--- a/pages/events/2018.11.Sympo.html
+++ b/pages/events/2018.11.Sympo.html
@@ -129,7 +129,7 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
     </tr>
     <tr>
       <td> 16:15 - 18:00 </td>
-      <td> Poster session </td>
+      <td> Poster session<!-- <a href="/events/2018.11.sympo_posters/">[program]</a> --></td>
     </tr>
     <!--
     <tr>
