Nikola auto commit.
Source commit: 674d3eaf3b8d243e0a0c67d8e26bcaa3835ba288
Nikola version: 8.0.0

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -141,6 +141,26 @@ navbar-dark bg-dark
 <td>Peter Spalthof</td>
       <td>C++ Framework for Simplifying Hierarchical Low-Rank Matrix Operations</td>
     </tr>
+<!--Murata group--><tr>
+<td>Arie Wahyu, Jun Jin Choong, Kaushalya Madhawa and Tsuyoshi Murata</td>
+      <td>Towards Robust Compressed Convolutional Neural Networks</td>
+    </tr>
+<tr>
+<td>Jun Jin Choong, Xin Liu &amp; Tsuyoshi Murata</td>
+      <td>Learning Community Structure with Variational Autoencoder</td>
+    </tr>
+<tr>
+<td>Hiep Le and Tsuyoshi Murata</td>
+      <td>Deep Modular Multimodal Fusion on Multiple Sensors for Volcano Activity Recognition</td>
+    </tr>
+<tr>
+<td>Arie Wahyu and Tsuyoshi Murata</td>
+      <td>Learning Adaptive Graph Protection Strategy on Dynamic Networks via Reinforcement Learning</td>
+    </tr>
+<tr>
+<td>Kaushalya Madhawa and Tsuyoshi Murata</td>
+      <td>Exploring Partially Observed Networks with Nonparametric Bandits</td>
+    </tr>
 <!--Matsuoka group--><tr>
 <td>Peng Chen</td>
       <td>Efficient Algorithms for the Summed Area Tables Primitive on GPUs</td>
