--- a/pages/events/2018.11.Sympo.html
+++ b/pages/events/2018.11.Sympo.html
@@ -10,7 +10,7 @@
 .. author: Aleksandr Drozd
 -->
 
-  <section>
+  <section >
     <h1>
       公開シンポジウム「Co-Designによる深層学習基盤」
     </h1>
@@ -74,10 +74,13 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
 
   </section>
   <section>
-      
+    <h2>
+      協賛
+    </h2>
+    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;">
 <br />
     <h2>
-スケジュール：
+スケジュール
     </h2>
 
 
