--- a/events/2018.11.sympo/index.html
+++ b/events/2018.11.sympo/index.html
@@ -124,8 +124,11 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
       </td>
     </tr>
          -->
-</tbody></table></section><section><br><h2>
-スケジュール：
+</tbody></table></section><section><h2>
+      協賛
+    </h2>
+    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;"><br><h2>
+スケジュール
     </h2>
 
 
@@ -176,7 +179,7 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
     </tr>
 <tr>
 <td> 16:15 - 18:00 </td>
-      <td> Poster session<!-- <a href="/events/2018.11.sympo_posters/">[program]</a> -->
+      <td> Poster session <a href="/events/2018.11.sympo_posters/">[program]</a>
 </td>
     </tr>
 <!--
