--- a/events/2018.11.sympo/index.src.html
+++ b/events/2018.11.sympo/index.src.html
@@ -10,7 +10,7 @@
 .. author: Aleksandr Drozd
 -->
 
-  <section>
+  <section >
     <h1>
       公開シンポジウム「Co-Designによる深層学習基盤」
     </h1>
@@ -74,10 +74,13 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
 
   </section>
   <section>
-      
+    <h2>
+      協賛
+    </h2>
+    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;">
 <br />
     <h2>
-スケジュール：
+スケジュール
     </h2>
 
 
@@ -129,7 +132,7 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
     </tr>
     <tr>
       <td> 16:15 - 18:00 </td>
-      <td> Poster session<!-- <a href="/events/2018.11.sympo_posters/">[program]</a> --></td>
+      <td> Poster session <a href="/events/2018.11.sympo_posters/">[program]</a></td>
     </tr>
     <!--
     <tr>
