Nikola auto commit.
Source commit: 5ffece4a4b2ff60f5c0e212866f54737a08366e0
Nikola version: 8.0.1

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -141,6 +141,10 @@ navbar-dark bg-dark
 <td>Peter Spalthof</td>
       <td>C++ Framework for Simplifying Hierarchical Low-Rank Matrix Operations</td>
     </tr>
+<!--Endo group--><tr>
+<td>Yuki Ito</td>
+      <td>Runtime GPU Memory Optimization for Supporting Large Neural Networks on Chainer </td>
+    </tr>
 <!--Murata group--><tr>
 <td>Arie Wahyu, Jun Jin Choong, Kaushalya Madhawa and Tsuyoshi Murata</td>
       <td>Towards Robust Compressed Convolutional Neural Networks</td>
