--- a/pages/events/2018.11.Sympo_posters.html
+++ b/pages/events/2018.11.Sympo_posters.html
@@ -55,6 +55,7 @@
     </tr>
 
      <!--Yokota group-->
+    <tr>
       <td>Yuji Kuwamura</td>
       <td>Acceleration of Natural Gradient Descent Using Kronecker Factorizatoin</td>
     </tr>
@@ -123,6 +124,18 @@
     <tr>
       <td>Mateusz Bysiek</td>
       <td>Between Python and performance</td>
+    </tr>
+    <tr>
+      <td>Kazuaki Matsumura</td>
+      <td>Compilation and Quantitative Approach Towards Loop Optimizations: A Case of Stencil Computation </td>
+    </tr>
+    <tr>
+      <td>Yohei Tsuji, Kazuki Osawa, Yuichiro Ueno, Akira Naruse, Rio Yokota, Satoshi Matsuoka</td>
+      <td>Accelerating Deep Learning with Distributed Computation and Second-Order Optimization</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
     </tr>
 
 
