Nikola auto commit.
Source commit: 6709385cb5185a8b72d857a9a62633d3f12ece9d
Nikola version: 8.0.1

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -118,10 +118,11 @@ navbar-dark bg-dark
 <td>Raden Muhammad Mu'az, Nakamasa Inoue, and Koichi Shinoda.</td>
       <td>Sequence-Level Knowledge Distillation for Model Compression of Attention-Based Sequence-To-Sequence Speech Recognition.</td>
     </tr>
-<!--Yokota group--><td>Yuji Kuwamura</td>
+<!--Yokota group--><tr>
+<td>Yuji Kuwamura</td>
       <td>Acceleration of Natural Gradient Descent Using Kronecker Factorizatoin</td>
-    
-    <tr>
+    </tr>
+<tr>
 <td>Hiroki Naganuma</td>
       <td>Smoothing of the Objective Function in Stochastic Optimization for Large Scale Parallel Learning</td>
     </tr>
@@ -180,6 +181,18 @@ navbar-dark bg-dark
 <tr>
 <td>Mateusz Bysiek</td>
       <td>Between Python and performance</td>
+    </tr>
+<tr>
+<td>Kazuaki Matsumura</td>
+      <td>Compilation and Quantitative Approach Towards Loop Optimizations: A Case of Stencil Computation </td>
+    </tr>
+<tr>
+<td>Yohei Tsuji, Kazuki Osawa, Yuichiro Ueno, Akira Naruse, Rio Yokota, Satoshi Matsuoka</td>
+      <td>Accelerating Deep Learning with Distributed Computation and Second-Order Optimization</td>
+    </tr>
+<tr>
+<td></td>
+      <td></td>
     </tr>
 </tbody></table>
 <a href="/events/2018.11.sympo/"> back to the event page </a></section>
