Nikola auto commit.
Source commit: 81413b071cd4f753c5fb2506f2f99f6baae157c5
Nikola version: 8.0.1

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -191,8 +191,12 @@ navbar-dark bg-dark
       <td>Accelerating Deep Learning with Distributed Computation and Second-Order Optimization</td>
     </tr>
 <tr>
-<td></td>
-      <td></td>
+<td>Yosuke Oyama, Tal Ben-Nun, Torsten Hoefler, Satoshi Matsuoka</td>
+      <td>μ-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching</td>
+    </tr>
+<tr>
+<td>大山洋介, 野村哲弘, 佐藤育郎, 松岡聡</td>
+      <td>大規模並列環境における低精度型を用いたディープラーニングの学習精度の検証</td>
     </tr>
 </tbody></table>
 <a href="/events/2018.11.sympo/"> back to the event page </a></section>
