--- a/pages/events/2018.11.Sympo_posters.html
+++ b/pages/events/2018.11.Sympo_posters.html
@@ -141,6 +141,10 @@
       <td>大山洋介, 野村哲弘, 佐藤育郎, 松岡聡</td>
       <td>大規模並列環境における低精度型を用いたディープラーニングの学習精度の検証</td>
     </tr>
+    <tr>
+      <td>Kevin A. Brown, Nikhil Jain, Satoshi Matsuoka, Martin Schulz, Abhinav Bhatele</td>
+      <td>A Deeper Understanding of Data Movement Bottlenecks on Fat-tree Networks</td>
+    </tr>
 
 
   </tbody>
