--- a/pages/events/2018.11.Sympo_posters.html
+++ b/pages/events/2018.11.Sympo_posters.html
@@ -145,7 +145,14 @@
       <td>Kevin A. Brown, Nikhil Jain, Satoshi Matsuoka, Martin Schulz, Abhinav Bhatele</td>
       <td>A Deeper Understanding of Data Movement Bottlenecks on Fat-tree Networks</td>
     </tr>
-
+    <tr>
+	<td>
+	    Hiroki Kanezashi, Toyotaro Suzumura, Dario Garcia-Gasulla, Min-Hwan and Satoshi Matsuoka
+	</td>
+	<td>
+	    Adaptive Pattern Matching with Reinforcement Learning for Dynamic Graphs
+	</td>
+    </tr>
 
   </tbody>
 </table>
