Nikola auto commit.
Source commit: 7660bd6cc7c582f925447c4102463882b7e405ca
Nikola version: 8.0.0b2

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -34,9 +34,7 @@
 
 <!-- Menubar -->
 
-<nav class="navbar navbar-expand-md static-top mb-4
-navbar-dark bg-dark
-"><div class="container">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark static-top mb-4"><div class="container">
 <!-- This keeps the margins nice -->
         <a class="navbar-brand" href="https://crest-deep.github.io/">
 
@@ -197,6 +195,18 @@ navbar-dark bg-dark
 <tr>
 <td>大山洋介, 野村哲弘, 佐藤育郎, 松岡聡</td>
       <td>大規模並列環境における低精度型を用いたディープラーニングの学習精度の検証</td>
+    </tr>
+<tr>
+<td>Kevin A. Brown, Nikhil Jain, Satoshi Matsuoka, Martin Schulz, Abhinav Bhatele</td>
+      <td>A Deeper Understanding of Data Movement Bottlenecks on Fat-tree Networks</td>
+    </tr>
+<tr>
+<td>
+	    Hiroki Kanezashi, Toyotaro Suzumura, Dario Garcia-Gasulla, Min-Hwan and Satoshi Matsuoka
+	</td>
+	<td>
+	    Adaptive Pattern Matching with Reinforcement Learning for Dynamic Graphs
+	</td>
     </tr>
 </tbody></table>
 <a href="/events/2018.11.sympo/"> back to the event page </a></section>
