--- a/events/2018.11.sympo_posters/index.src.html
+++ b/events/2018.11.sympo_posters/index.src.html
@@ -141,7 +141,18 @@
       <td>大山洋介, 野村哲弘, 佐藤育郎, 松岡聡</td>
       <td>大規模並列環境における低精度型を用いたディープラーニングの学習精度の検証</td>
     </tr>
-
+    <tr>
+      <td>Kevin A. Brown, Nikhil Jain, Satoshi Matsuoka, Martin Schulz, Abhinav Bhatele</td>
+      <td>A Deeper Understanding of Data Movement Bottlenecks on Fat-tree Networks</td>
+    </tr>
+    <tr>
+	<td>
+	    Hiroki Kanezashi, Toyotaro Suzumura, Dario Garcia-Gasulla, Min-Hwan and Satoshi Matsuoka
+	</td>
+	<td>
+	    Adaptive Pattern Matching with Reinforcement Learning for Dynamic Graphs
+	</td>
+    </tr>
 
   </tbody>
 </table>
