--- a/publications/index.html
+++ b/publications/index.html
@@ -28,9 +28,7 @@ In Proc. Inters">
 
 <!-- Menubar -->
 
-<nav class="navbar navbar-expand-md static-top mb-4
-navbar-dark bg-dark
-"><div class="container">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark static-top mb-4"><div class="container">
 <!-- This keeps the margins nice -->
         <a class="navbar-brand" href="https://crest-deep.github.io/">
 
@@ -456,37 +454,6 @@ In <em>Asian Conference on Supercomputing Frontiers</em>, 179–198. Springer, 2
 }
 </pre></div>
 </li>
-<li class="publication" style="padding-bottom: 1em;">Y. <span class="bibtex-protected">Oyama</span>, T. <span class="bibtex-protected">Ben-Nun</span>, T. <span class="bibtex-protected">Hoefler</span>, and S. <span class="bibtex-protected">Matsuoka</span>.
-<strong><span class="bibtex-protected">$\<span class="bibtex-protected">$$\backslash $mu$\</span>$-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching</span>.</strong>
-<em>ArXiv e-prints</em>, April 2018.
-<a href="https://arxiv.org/abs/1804.04806">arXiv:1804.04806</a>.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-2018arXiv180404806O');">BibTeX▼</a>]
-            <div id="bibtex-2018arXiv180404806O" style="display:none"><pre>@article{2018arXiv180404806O,
-    author = "{Oyama}, Y. and {Ben-Nun}, T. and {Hoefler}, T. and {Matsuoka}, S.",
-    title = "{$\{$$\backslash$mu$\}$-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching}",
-    journal = "ArXiv e-prints",
-    archivePrefix = "arXiv",
-    eprint = "1804.04806",
-    keywords = "Computer Science - Machine Learning, Computer Science - Distributed, Parallel, and Cluster Computing, Computer Science - Mathematical Software, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning, I.2.6",
-    year = "2018",
-    month = "April",
-    adsurl = "http://adsabs.harvard.edu/abs/2018arXiv180404806O",
-    adsnote = "Provided by the SAO/NASA Astrophysics Data System"
-}
-</pre></div>
-</li>
 <li class="publication" style="padding-bottom: 1em;">Arie Wahyu Wijayanto and Tsuyoshi Murata.
 <strong>Pre-emptive spectral graph protection strategies on multiplex social networks.</strong>
 <em>Applied Network Science</em>, 3(1):5, Apr 2018.<br>
@@ -542,81 +509,6 @@ In <em>Proceedings of The 2018 IEEE/WIC/ACM International Conference on Web Inte
     year = "2018",
     month = "Dec",
     pages = "to appear"
-}
-</pre></div>
-</li>
-<li class="publication" style="padding-bottom: 1em;">Jun Jin Choong, Xin Liu, and Tsuyoshi Murata.
-<strong>Learning community structure with variational autoencoder.</strong>
-In <em>Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)</em>. Nov 2018.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-jun2018icdm');">BibTeX▼</a>]
-            <div id="bibtex-jun2018icdm" style="display:none"><pre>@inproceedings{jun2018icdm,
-    author = "Choong, Jun Jin and Liu, Xin and Murata, Tsuyoshi",
-    title = "Learning Community Structure with Variational Autoencoder",
-    booktitle = "Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)",
-    year = "2018",
-    month = "Nov"
-}
-</pre></div>
-</li>
-<li class="publication" style="padding-bottom: 1em;">Kaushalya Madhawa and Tsuyoshi Murata.
-<strong>Exploring partially observed networks with nonparametric bandits.</strong>
-In <em>Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)</em>. Dec 2018.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-kaushalya2018cna');">BibTeX▼</a>]
-            <div id="bibtex-kaushalya2018cna" style="display:none"><pre>@inproceedings{kaushalya2018cna,
-    author = "Madhawa, Kaushalya and Murata, Tsuyoshi",
-    title = "Exploring Partially Observed Networks with Nonparametric Bandits",
-    booktitle = "Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)",
-    year = "2018",
-    month = "Dec"
-}
-</pre></div>
-</li>
-<li class="publication" style="padding-bottom: 1em;">Arie Wahyu Wijayanto, Jun Jin Choong, Kaushalaya Madhawa, and Tsuyoshi Murata.
-<strong>Robustness of compressed convolutional neural networks.</strong>
-In <em>Proceedings of The 2018 IEEE Workshop on Big Data for CyberSecurity (BigData 2018)</em>. Dec 2018.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-wijayanto2018bigcyber');">BibTeX▼</a>]
-            <div id="bibtex-wijayanto2018bigcyber" style="display:none"><pre>@inproceedings{wijayanto2018bigcyber,
-    author = "Wijayanto, Arie Wahyu and Choong, Jun Jin and Madhawa, Kaushalaya and Murata, Tsuyoshi",
-    title = "Robustness of Compressed Convolutional Neural Networks",
-    booktitle = "Proceedings of The 2018 IEEE Workshop on Big Data for CyberSecurity (BigData 2018)",
-    year = "2018",
-    month = "Dec"
 }
 </pre></div>
 </li>
@@ -1021,59 +913,6 @@ In <em>Artificial Neural Networks and Machine Learning - ICANN 2017</em>, volume
     Title = "Evaluating the Compression Efficiency of the Filters in Convolutional Neural Networks",
     Volume = "10614",
     Year = "2017"
-}
-</pre></div>
-</li>
-<li class="publication" style="padding-bottom: 1em;">
-<span class="bibtex-protected">大山 洋介</span>, <span class="bibtex-protected">野村 哲弘</span>, <span class="bibtex-protected">佐藤 育郎</span>, and <span class="bibtex-protected">松岡 聡</span>.
-<strong>ディープラーニングのデータ並列学習における少精度浮動小数点数を用いた通信量の削減.</strong>
-<em>IPSJ SIG Technical Report, Vol. 2017-HPC-158</em>, pages 1–10, 2017.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-oyama-hpc158');">BibTeX▼</a>]
-            <div id="bibtex-oyama-hpc158" style="display:none"><pre>@article{oyama-hpc158,
-    author = "{大山 洋介} and {野村 哲弘} and {佐藤 育郎} and {松岡 聡}",
-    journal = "IPSJ SIG Technical Report, Vol. 2017-HPC-158",
-    number = "30",
-    pages = "1--10",
-    title = "ディープラーニングのデータ並列学習における少精度浮動小数点数を用いた通信量の削減",
-    year = "2017"
-}
-</pre></div>
-</li>
-<li class="publication" style="padding-bottom: 1em;">Yosuke Oyama, Tal Ben-Nun, Torsten Hoefler, and Satoshi Matsuoka.
-<strong><span class="bibtex-protected">Less is More: Accelerating Deep Neural Networks with Micro-Batching</span>.</strong>
-<em>IPSJ SIG Technical Report, Vol. 2017-HPC-162</em>, pages 1–9, 2017.<br>
-            [<a href="javascript:void(0)" onclick="
-            (function(target, id) {
-              if ($('#' + id).css('display') == 'block')
-              {
-                $('#' + id).hide('fast');
-                $(target).text('BibTeX▼')
-              }
-              else
-              {
-                $('#' + id).show('fast');
-                $(target).text('BibTeX▲')
-              }
-            })(this, 'bibtex-oyama-hpc162');">BibTeX▼</a>]
-            <div id="bibtex-oyama-hpc162" style="display:none"><pre>@article{oyama-hpc162,
-    author = "Oyama, Yosuke and Ben-Nun, Tal and Hoefler, Torsten and Matsuoka, Satoshi",
-    journal = "IPSJ SIG Technical Report, Vol. 2017-HPC-162",
-    number = "22",
-    pages = "1--9",
-    title = "{Less is More: Accelerating Deep Neural Networks with Micro-Batching}",
-    year = "2017"
 }
 </pre></div>
 </li>
