Nikola auto commit.
Source commit: f951d9470fddb98cb560ff6b0fe93fcaea317121
Nikola version: 8.0.0b2

--- a/events/2018.11.sympo_posters/index.html
+++ b/events/2018.11.sympo_posters/index.html
@@ -169,7 +169,7 @@
       <td>Efficient Algorithms for the Summed Area Tables Primitive on GPUs</td>
     </tr>
 <tr>
-<td>Shweta Salaria</td>
+<td>Shweta Salaria, Aleksandr Drozd, Artur Podobas and Satoshi Matsuoka</td>
       <td>Predicting Performance Using Collaborative Filtering</td>
     </tr>
 <tr>
@@ -202,12 +202,58 @@
     </tr>
 <tr>
 <td>
-	    Hiroki Kanezashi, Toyotaro Suzumura, Dario Garcia-Gasulla, Min-Hwan and Satoshi Matsuoka
-	</td>
-	<td>
-	    Adaptive Pattern Matching with Reinforcement Learning for Dynamic Graphs
-	</td>
+      Hiroki Kanezashi, Toyotaro Suzumura, Dario Garcia-Gasulla, Min-Hwan and Satoshi Matsuoka
+  </td>
+  <td>
+      Adaptive Pattern Matching with Reinforcement Learning for Dynamic Graphs
+  </td>
     </tr>
+<tr>
+<td>
+      Haoyu Zhang, Mohamed Wahib, Peng Chen and Satoshi Matsuoka.
+    </td>
+    <td>Can Local Binary Convolutions Really Make Neural Networks Models Smaller?
+    </td>
+   </tr>
+<tr>
+<td>
+      Ryan Barton1, Mohamed Wahib, Artur Podobas and Satoshi Matsuoka
+    </td>
+    <td>BITFLEX: A Dynamic Runtime Library for Bit-Level Precision Manipulation and Approximate Computing
+    </td>
+   </tr>
+<tr>
+<td>
+      Peng Chen, Mohamed Wahib, Shinichiro Takizawa and Satoshi Matsuoka
+    </td>
+    <td>
+    Pushing the Limits for 2D Convolution Computation On CUDA-enabled GPUs
+    </td>
+   </tr>
+<tr>
+<td>
+      Yusuke Nagasaka, Akira Nukada, Ryosuke Kojima and Satoshi Matsuoka. 
+    </td>
+    <td>
+      Batched SpMM for Accelerating GCN Application.
+    </td>
+   </tr>
+<tr>
+<td>
+      Artur Podobas and Satoshi Matsuoka
+    </td>
+    <td>
+      Towards Numerical Precision Exploration of Deep-Learning using FPGAs
+    </td>
+   </tr>
+<tr>
+<td>
+      八島慶汰、大山洋介、松岡聡
+    </td>
+    <td>
+      深層学習におけるBatchNormalization使用時の計算時間と精度の関係性
+    </td>
+   </tr>
 </tbody></table>
 <a href="/events/2018.11.sympo/"> back to the event page </a></section>
 </div>
