--- a/pages/events/2018.11.Sympo_posters.html
+++ b/pages/events/2018.11.Sympo_posters.html
@@ -199,6 +199,14 @@
       深層学習におけるBatchNormalization使用時の計算時間と精度の関係性
     </td>
    </tr>
+  <tr>
+    <td>
+	土川 稔生, 大山洋介, 野村 哲弘, 松岡聡
+    </td>
+    <td>
+	機械学習による計算機トレースの自動生成
+    </td>
+   </tr>
   
   </tbody>
 </table>
