Nikola auto commit.
Source commit: e1094fd9ac1a0ed7b54195459dc96d598a004623
Nikola version: 8.0.0b2

--- a/events/2018.11.sympo/index.html
+++ b/events/2018.11.sympo/index.html
@@ -147,32 +147,38 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
       </td>
     </tr>
 <tr>
-<td> 14:00 - 14:45 </td>
+<td> 14:00 - 14:30 </td>
       <td>
-         招待講演 「Deep Learning 2.0: From algorithms to silicon」 
-         <br>
-          Prof. Vijay Ramaseshan Chandrasekhar (A*STAR, Singapore)
-
-      </td>
+          本CRESTの研究紹介 1
+          <br>
+         「High Performance and Scalable Deep Learning / AI」松岡聡(東工大/理研)
+          <br>
+          「Second Order Optimization Methods for Large Scale Distributed Deep Learning」横田理央(東工大)
+          <br>
+</td>
     </tr>
 <tr>
-<td> 14:45 - 15:15 </td>
+<td> 14:30 - 15:00 </td>
       <td>
         Coffee Break
       </td>
     </tr>
 <tr>
-<td> 15:15 - 16:15 </td>
+<td> 15:00 - 15:30 </td>
       <td> 
-          本CRESTの研究紹介
-          <br>
-          「Second Order Optimization Methods for Large Scale Distributed Deep Learning」横田理央(東工大)
-          <br>
-         「タイトル未定」松岡聡(東工大/理研)
+          本CRESTの研究紹介 2
           <br>
          「Deep Learning Tailored for Human Action Recognition」篠田浩一(東工大)
           <br>
          「Robust Compressed Convolutional Neural Networks」村田剛志(東工大)    
+       </td>
+    </tr>
+<tr>
+<td> 15:30 - 16:15 </td>
+      <td> 
+         招待講演 「Deep Learning 2.0: From algorithms to silicon」 
+         <br>
+          Prof. Vijay Ramaseshan Chandrasekhar (A*STAR, Singapore)
        </td>
     </tr>
 <tr>
