--- a/pages/events/2018.11.Sympo.html
+++ b/pages/events/2018.11.Sympo.html
@@ -78,6 +78,7 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
       協賛
     </h2>
     <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;">
+    <img src="/assets/img/Arm_logo_blue_150LG.png" style="height: 70px; margin: 35px;">
 <br />
     <h2>
 スケジュール
