Nikola auto commit.
Source commit: b2e21f17e1ac5ce7cbdf5e53ddb2bc58640e9915
Nikola version: 8.0.1

--- a/events/2018.11.sympo/index.html
+++ b/events/2018.11.sympo/index.html
@@ -27,7 +27,9 @@
 
 <!-- Menubar -->
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark static-top mb-4"><div class="container">
+<nav class="navbar navbar-expand-md static-top mb-4
+navbar-dark bg-dark
+"><div class="container">
 <!-- This keeps the margins nice -->
         <a class="navbar-brand" href="https://crest-deep.github.io/">
 
@@ -125,7 +127,7 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
 </tbody></table></section><section><h2>
       協賛
     </h2>
-    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;"><br><h2>
+    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;"><img src="/assets/img/Arm_logo_blue_150LG.png" style="height: 70px; margin: 35px;"><br><h2>
 スケジュール
     </h2>
 
