Nikola auto commit.
Source commit: f64e4930d80322a965f10262ffaca4a4af5179ca
Nikola version: 8.0.1

--- a/events/2018.11.sympo/index.html
+++ b/events/2018.11.sympo/index.html
@@ -114,6 +114,13 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
 <th scope="row" class="align-top">会費：</th>
       <td>無料</td>
     </tr>
+<tr>
+<th scope="row" class="align-top">懇親会：</th>
+      <td>
+        時間：18:00-20:00 <br>
+        場所：生協第１食堂2F, 会費 3,000円
+      </td>
+    </tr>
 <!--
     <tr>
       <th scope="row"  class="align-top">Invited talks </th>
@@ -124,10 +131,10 @@ http://www.jst.go.jp/kisoken/jyonetsu/interview/h29/shinoda.html
       </td>
     </tr>
          -->
-</tbody></table></section><section><h2>
+</tbody></table></section><br><section><h2>
       協賛
     </h2>
-    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;"><img src="/assets/img/Arm_logo_blue_150LG.png" style="height: 70px; margin: 35px;"><br><h2>
+    <img src="/assets/img/hpesm_pri_grn_pos_rgb.png" style="margin: 35px;"><img src="/assets/img/Arm_logo_blue_150LG.png" style="height: 70px; margin: 35px;"><br><br><h2>
 スケジュール
     </h2>
 
