Nikola auto commit.
Source commit: ad28d61680d41185cc3608ffb1660d0951e46cc1
Nikola version: 8.0.2

--- a/events/2018.11.sympo/index.html
+++ b/events/2018.11.sympo/index.html
@@ -51,7 +51,7 @@ navbar-dark bg-dark
 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu">
                     <a href="/events/2018.11.sympo/" class="dropdown-item active">CREST-Deep Symposium Nov 2018 <span class="sr-only">(active)</span></a>
-                    <a href="/events/20190307_workshop/" class="dropdown-item">I2R-TokyoTech Co-Workshop on Deep Learning</a>
+                    <a href="/events/20190307_workshop/" class="dropdown-item">I2R-TokyoTech Co-Workshop on Deep Learning Mar 2019</a>
             </div>
 
                 
