--- a/events/20190307_workshop/index.html
+++ b/events/20190307_workshop/index.html
@@ -49,7 +49,7 @@ navbar-dark bg-dark
 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu">
                     <a href="/events/2018.11.sympo/" class="dropdown-item">CREST-Deep Symposium Nov 2018</a>
-                    <a href="/events/20190307_workshop/" class="dropdown-item active">I2R-TokyoTech Co-Workshop on Deep Learning <span class="sr-only">(active)</span></a>
+                    <a href="/events/20190307_workshop/" class="dropdown-item active">I2R-TokyoTech Co-Workshop on Deep Learning Mar 2019 <span class="sr-only">(active)</span></a>
             </div>
 
                 
@@ -90,8 +90,21 @@ navbar-dark bg-dark
     <p>
         This workshop focuses on topics that accelerate state of the art deep learning algorithms with the aim of large GPU clusters (e.g., 4000 GPUs). Specifically, the speakers will introduce second-order methods that enable fast and parallel training of deep neural networks and how they can be applied to accelerate HE and GANs. We will also discuss other topics that are closely related to DL2.0’s roadmap, including learning with less data, hardware implementation of deep networks, model compression and so on.
     </p>
-    <a href="/events/20190307_workshop_schedule/">[program]</a> 
-</section><section><table class="table">
+    <table class="table"><tbody>
+<tr>
+<td><b>Date:</b></td>
+                <td>2019.03.07 - 2019.03.09</td>
+            </tr>
+<tr>
+<td><b>Place:</b></td>
+                <td>Connexis North Tower, Fusionopolis One, Singapore</td>
+            </tr>
+<tr>
+<td><b>Schedule</b></td>
+                <td>
+<a href="/events/20190307_workshop_schedule/">[Workshop Schedule]</a> </td>
+            </tr>
+</tbody></table></section><section><table class="table">
 <col width="15%">
 <thead><tr>
 <td>Speaker</td>
