--- a/pages/events/20190307_workshop.html
+++ b/pages/events/20190307_workshop.html
@@ -16,7 +16,22 @@
     <p>
         This workshop focuses on topics that accelerate state of the art deep learning algorithms with the aim of large GPU clusters (e.g., 4000 GPUs). Specifically, the speakers will introduce second-order methods that enable fast and parallel training of deep neural networks and how they can be applied to accelerate HE and GANs. We will also discuss other topics that are closely related to DL2.0’s roadmap, including learning with less data, hardware implementation of deep networks, model compression and so on.
     </p>
-    <a href="/events/20190307_workshop_schedule/">[program]</a> 
+    <table class=table>
+        <tbody>
+            <tr>
+                <td><b>Date:</b></td>
+                <td>2019.03.07 - 2019.03.09</td>
+            </tr>
+            <tr>
+                <td><b>Place:</b></td>
+                <td>Connexis North Tower, Fusionopolis One, Singapore</td>
+            </tr>
+            <tr>
+                <td><b>Schedule</b></td>
+                <td><a href="/events/20190307_workshop_schedule/">[Workshop Schedule]</a> </td>
+            </tr>
+        </tbody>
+    </table>
 </section>
 <section>
 <table class=table>
