Nikola auto commit.
Source commit: 75ee38fd54041492c64d7e5361926d830f35c644
Nikola version: 8.0.2

--- a/publications/index.html
+++ b/publications/index.html
@@ -47,6 +47,9 @@ navbar-dark bg-dark
                 </li>
 <li class="nav-item active">
 <a href="/publications/" class="nav-link">Publications <span class="sr-only">(active)</span></a>
+                </li>
+<li class="nav-item">
+<a href="/Meetings/" class="nav-link">Meetings</a>
             </li>
 <li class="nav-item dropdown">
 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
@@ -1140,7 +1143,7 @@ In <em>2016 IEEE International Conference on Big Data (Big Data)</em>, 66–75. 
     
 
 </article><!--End of body content--><footer id="footer">
-            Contents © 2019         <a href="mailto:alex@blackbird.pw">Crest Deep</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
+            Contents © 2019         <a href="mailto:cervantes@ks.cs.titech.ac.jp">Crest Deep</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
             
         </footer>
 </div>
