--- a/team/index.html
+++ b/team/index.html
@@ -56,6 +56,9 @@ navbar-dark bg-dark
                 </li>
 <li class="nav-item">
 <a href="/publications/" class="nav-link">Publications</a>
+                </li>
+<li class="nav-item">
+<a href="/Meetings/" class="nav-link">Meetings</a>
             </li>
 <li class="nav-item dropdown">
 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
@@ -122,7 +125,7 @@ navbar-dark bg-dark
     
 
 </article><!--End of body content--><footer id="footer">
-            Contents © 2019         <a href="mailto:alex@blackbird.pw">Crest Deep</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
+            Contents © 2019         <a href="mailto:cervantes@ks.cs.titech.ac.jp">Crest Deep</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
             
         </footer>
 </div>
