Nikola auto commit.
Source commit: cdd09fd14d8032c9c822b23c394af950c7525696
Nikola version: 8.0.2

--- a/Meetings/index.src.html
+++ b/Meetings/index.src.html
@@ -56,7 +56,16 @@
             <td>06/11</td>
             <td>15:00-16:30</td>
             <td>W9 Collaboration room</td>
-            <td>TBA</td>
+            <td>
+                    <table class="item_table">
+                            <col width="30%">
+                            <tr>
+                                <td>Yoshiyuki Kobayashi <br> [@Sony]</td>
+                                <td>Sony’s deep learning toolchain for efficient R&D and human resource development</td>
+                            </tr>
+                        </table>
+                    </td>
+            </td>
         </tr>
         <tr>
             <td>07/09</td>
