--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -129,7 +129,16 @@ navbar-dark bg-dark
 <td>06/11</td>
             <td>15:00-16:30</td>
             <td>W9 Collaboration room</td>
-            <td>TBA</td>
+            <td>
+                    <table class="item_table">
+<col width="30%">
+<tr>
+<td>Yoshiyuki Kobayashi <br> [@Sony]</td>
+                                <td>Sony’s deep learning toolchain for efficient R&amp;D and human resource development</td>
+                            </tr>
+</table>
+</td>
+            
         </tr>
 <tr>
 <td>07/09</td>
