--- a/pages/Meetings.html
+++ b/pages/Meetings.html
@@ -50,7 +50,7 @@
             <td>05/21</td>
             <td>13:20-14:50</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>Cancelled (Staff meeting starts 13:20)</td>
         </tr>
         <tr>
             <td>06/11</td>
