--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -123,7 +123,7 @@ navbar-dark bg-dark
 <td>05/21</td>
             <td>13:20-14:50</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>Cancelled (Staff meeting starts 13:20)</td>
         </tr>
 <tr>
 <td>06/11</td>
