Nikola auto commit.
Source commit: 377a919590c34f8335045698bdb1c26b9605ebf2
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -136,6 +136,10 @@ navbar-dark bg-dark
 <td>Yoshiyuki Kobayashi <br> [@Sony]</td>
                                 <td>Sony’s deep learning toolchain for efficient R&amp;D and human resource development</td>
                             </tr>
+<tr>
+<td>Mauro Dalla Mura<br> [@Shinoda]</td>
+                                <td>Analysis of remote sensing data: some developments and open challenges</td>
+                            </tr>
 </table>
 </td>
             
@@ -150,7 +154,7 @@ navbar-dark bg-dark
 <td>08/15</td>
             <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>Cancelled</td>
         </tr>
 <tr>
 <td>09/10</td>
