--- a/Meetings/index.src.html
+++ b/Meetings/index.src.html
@@ -63,6 +63,10 @@
                                 <td>Yoshiyuki Kobayashi <br> [@Sony]</td>
                                 <td>Sony’s deep learning toolchain for efficient R&D and human resource development</td>
                             </tr>
+                            <tr>
+                                <td>Mauro Dalla Mura<br> [@Shinoda]</td>
+                                <td>Analysis of remote sensing data: some developments and open challenges</td>
+                            </tr>
                         </table>
                     </td>
             </td>
@@ -77,7 +81,7 @@
             <td>08/15</td>
             <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>Cancelled</td>
         </tr>
         <tr>
             <td>09/10</td>
