Nikola auto commit.
Source commit: 1022a20c1d3076edcb215f55bb4272257fba65e0
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -109,11 +109,11 @@ navbar-dark bg-dark
                 <table class="item_table">
 <col width="30%">
 <tr>
-<td>Kuniaki Uto <br> [@Shinoda group]</td>
+<td>Kuniaki Uto <br> [@Shinoda Lab]</td>
                         <td>Seeking for novel and innovative indicators of plant growth based on drone-captured image</td>
                     </tr>
 <tr>
-<td>Pablo Cervantes <br> [@Shinoda group]</td>
+<td>Pablo Cervantes <br> [@Shinoda Lab]</td>
                         <td>Workshop Summary &amp; Brief Survey on Video Generation</td>
                     </tr>
 </table>
@@ -130,16 +130,16 @@ navbar-dark bg-dark
             <td>15:00-16:30</td>
             <td>W9 Collaboration room</td>
             <td>
-                    <table class="item_table">
+                <table class="item_table">
 <col width="30%">
 <tr>
 <td>Yoshiyuki Kobayashi <br> [@Sony]</td>
-                                <td>Sony’s deep learning toolchain for efficient R&amp;D and human resource development</td>
-                            </tr>
+                            <td>Sony’s deep learning toolchain for efficient R&amp;D and human resource development</td>
+                        </tr>
 <tr>
-<td>Mauro Dalla Mura<br> [@Shinoda]</td>
-                                <td>Analysis of remote sensing data: some developments and open challenges</td>
-                            </tr>
+<td>Mauro Dalla Mura<br> [@Shinoda Lab]</td>
+                            <td>Analysis of remote sensing data: some developments and open challenges</td>
+                        </tr>
 </table>
 </td>
             
@@ -148,7 +148,19 @@ navbar-dark bg-dark
 <td>07/09</td>
             <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>
+                <table class="item_table">
+<col width="30%">
+<tr>
+<td>Choong Jun Jin <br> [@Murata Lab]</td>
+                            <td>ICLR 2019: An Overview and Summary of State-of-the-Art Papers</td>
+                        </tr>
+<tr>
+<td>Kaushalya Madhawa<br> [@Murata Lab]</td>
+                            <td>Scene graphs for visual relationship understanding</td>
+                        </tr>
+</table>
+</td>
         </tr>
 <tr>
 <td>08/15</td>
