Nikola auto commit.
Source commit: b1d039e47ec82ad171e2f48b68264c954746e242
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -166,22 +166,69 @@ navbar-dark bg-dark
 <td>08/15</td>
             <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
-            <td>Cancelled</td>
+            <td>Cancelled (Summer Camp)</td>
         </tr>
 <tr>
 <td>09/10</td>
             <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
+            <td>Cancelled (Staff meeting starts 15:05)</td>
+        </tr>
+<tr>
+<td>10/08</td>
+            <td>15:05-16:35</td>
+            <td>GSIC２階会議室</td>
+            <td>TBA</td>
+    </tr>
+<tr>
+<td>11/12</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+<tr>
+<td>12/10</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
             <td>TBA</td>
         </tr>
 </tbody>
-</table></section><style>
+</table></section><section><table class="table">
+<col width="10%">
+<col width="10%">
+<col width="25%">
+<col width="55%">
+<thead><tr>
+<th colspan="4" style="text-align: center">2020 - Meeting Schedule</th>
+        </tr></thead>
+<tbody>
+<tr>
+<td>01/07</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+<tr>
+<td>02/12</td>
+            <td>15:05-16:35</td>
+            <td>GSIC２階会議室</td>
+            <td>TBA</td>
+        </tr>
+<tr>
+<td>03/10</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+</tbody>
+<style>
 table.item_table, .item_table td {
     padding: 3px 10px;
     border:none;
     height: 0px;
 }
 </style>
+</table></section>
 </div>
     
 
