--- a/pages/Meetings.html
+++ b/pages/Meetings.html
@@ -11,6 +11,44 @@
 -->
 
 <section>
+    <table class=table>
+    <col width="10%">
+    <col width="10%">
+    <col width="25%">
+    <col width="55%">
+    <thead>
+        <tr>
+            <th colspan="4" style="text-align: center">2020 - Meeting Schedule</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><b>Date (MM/DD)</b></td>
+            <td><b>Time</b></td>
+            <td><b>Location</b></td>
+            <td><b>Presenter/Title</b></td>
+        </tr>
+        <tr>
+            <td>03/10</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+        <tr>
+            <td>02/12</td>
+            <td>15:05-16:35</td>
+            <td>GSIC２階会議室</td>
+            <td>TBA</td>
+        </tr>
+        <tr>
+            <td>01/07</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+    </tbody>
+</section>
+<section>
 <table class=table>
 <col width="10%">
 <col width="10%">
@@ -29,28 +67,52 @@
             <td><b>Presenter/Title</b></td>
         </tr>
         <tr>
-            <td>04/09</td>
-            <td>13:00-14:30</td>
+            <td>12/10</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+        <tr>
+            <td>11/12</td>
+            <td>15:05-16:35</td>
+            <td>W8E 10F large meeting room</td>
+            <td>TBA</td>
+        </tr>
+        <tr>
+            <td>10/08</td>
+            <td>15:05-16:35</td>
+            <td>GSIC２階会議室</td>
+            <td>TBA</td>
+        </tr>
+        <tr>
+            <td>09/10</td>
+            <td>15:00-16:30</td>
+            <td>W8E 10F large meeting room</td>
+            <td>Cancelled (Staff meeting starts 15:05)</td>
+        </tr>
+        <tr>
+            <td>08/15</td>
+            <td>15:00-16:30</td>
+            <td>W8E 10F large meeting room</td>
+            <td>Cancelled (Summer Camp)</td>
+        </tr>
+        <tr>
+            <td>07/09</td>
+            <td>15:00-16:30</td>
             <td>W8E 10F large meeting room</td>
             <td>
                 <table class="item_table">
-                    <col width="30%">
-                    <tr>
-                        <td>Kuniaki Uto <br> [@Shinoda Lab]</td>
-                        <td>Seeking for novel and innovative indicators of plant growth based on drone-captured image</td>
-                    </tr>
-                    <tr>
-                        <td>Pablo Cervantes <br> [@Shinoda Lab]</td>
-                        <td>Workshop Summary & Brief Survey on Video Generation</td>
-                    </tr>
+                        <col width="30%">
+                        <tr>
+                            <td>Choong Jun Jin <br> [@Murata Lab]</td>
+                            <td>ICLR 2019: An Overview and Summary of State-of-the-Art Papers</td>
+                        </tr>
+                        <tr>
+                            <td>Kaushalya Madhawa<br> [@Murata Lab]</td>
+                            <td>Scene graphs for visual relationship understanding</td>
+                        </tr>
                 </table>
             </td>
-        </tr>
-        <tr>
-            <td>05/21</td>
-            <td>13:20-14:50</td>
-            <td>W8E 10F large meeting room</td>
-            <td>Cancelled (Staff meeting starts 13:20)</td>
         </tr>
         <tr>
             <td>06/11</td>
@@ -72,87 +134,32 @@
             </td>
         </tr>
         <tr>
-            <td>07/09</td>
-            <td>15:00-16:30</td>
+            <td>05/21</td>
+            <td>13:20-14:50</td>
+            <td>W8E 10F large meeting room</td>
+            <td>Cancelled (Staff meeting starts 13:20)</td>
+        </tr>
+        <tr>
+            <td>04/09</td>
+            <td>13:00-14:30</td>
             <td>W8E 10F large meeting room</td>
             <td>
                 <table class="item_table">
-                        <col width="30%">
-                        <tr>
-                            <td>Choong Jun Jin <br> [@Murata Lab]</td>
-                            <td>ICLR 2019: An Overview and Summary of State-of-the-Art Papers</td>
-                        </tr>
-                        <tr>
-                            <td>Kaushalya Madhawa<br> [@Murata Lab]</td>
-                            <td>Scene graphs for visual relationship understanding</td>
-                        </tr>
+                    <col width="30%">
+                    <tr>
+                        <td>Kuniaki Uto <br> [@Shinoda Lab]</td>
+                        <td>Seeking for novel and innovative indicators of plant growth based on drone-captured image</td>
+                    </tr>
+                    <tr>
+                        <td>Pablo Cervantes <br> [@Shinoda Lab]</td>
+                        <td>Workshop Summary & Brief Survey on Video Generation</td>
+                    </tr>
                 </table>
             </td>
-        </tr>
-        <tr>
-            <td>08/15</td>
-            <td>15:00-16:30</td>
-            <td>W8E 10F large meeting room</td>
-            <td>Cancelled (Summer Camp)</td>
-        </tr>
-        <tr>
-            <td>09/10</td>
-            <td>15:00-16:30</td>
-            <td>W8E 10F large meeting room</td>
-            <td>Cancelled (Staff meeting starts 15:05)</td>
-        </tr>
-        <tr>
-            <td>10/08</td>
-            <td>15:05-16:35</td>
-            <td>GSIC２階会議室</td>
-            <td>TBA</td>
-    </tr>
-        <tr>
-            <td>11/12</td>
-            <td>15:05-16:35</td>
-            <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
-        </tr>
-        <tr>
-            <td>12/10</td>
-            <td>15:05-16:35</td>
-            <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
         </tr>
     </tbody>
 </table>
 </section>
-<section>
-    <table class=table>
-    <col width="10%">
-    <col width="10%">
-    <col width="25%">
-    <col width="55%">
-    <thead>
-        <tr>
-            <th colspan="4" style="text-align: center">2020 - Meeting Schedule</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>01/07</td>
-            <td>15:05-16:35</td>
-            <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
-        </tr>
-        <tr>
-            <td>02/12</td>
-            <td>15:05-16:35</td>
-            <td>GSIC２階会議室</td>
-            <td>TBA</td>
-        </tr>
-        <tr>
-            <td>03/10</td>
-            <td>15:05-16:35</td>
-            <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
-        </tr>
-    </tbody>
 <style>
 table.item_table, .item_table td {
     padding: 3px 10px;
