--- a/team/index.html
+++ b/team/index.html
@@ -119,6 +119,21 @@ navbar-dark bg-dark
       <td>Co-Investigator</td>
       <td>Tokyo Institute of Technology</td>
     </tr>
+<tr>
+<th scope="row">Masaki Onishi</th>
+      <td>Co-Investigator</td>
+      <td>National Institute of Advanced Industrial Science and Technology (AIST)</td>
+    </tr>
+<tr>
+<th scope="row">Hiroki Nakahara</th>
+      <td>Co-Investigator</td>
+      <td>Tokyo Institute of Technology</td>
+    </tr>
+<tr>
+<th scope="row">Taiji Suzuki</th>
+      <td>Co-Investigator</td>
+      <td>University of Tokyo</td>
+    </tr>
 </tbody>
 </table></section>
 </div>
