--- a/pages/index.html
+++ b/pages/index.html
@@ -14,4 +14,7 @@
     <h1>
         Fast and cost-effective deep learning algorithm platform for video processing in social infrastructure
     </h1>
+    <p>
+      Deep learning has triggered the rapid expansion of AI industries. Still, we have a lot of difficult problems to solve. For this purpose, we employ a co-design framework in which researchers from different background get together to optimize the system architecture and algorithms simultaneously for deep learning. We believe this co-design framework gives us the next breakthrough to AI research. Our target for this three years is a real-time video analysis system for realizing safe and smart society. Its typical applications include human behavior prediction for auto driving and for surveillance.
+    </p>
   </section>
