--- a/pages/Meetings.html
+++ b/pages/Meetings.html
@@ -82,7 +82,23 @@
             <td>10/08</td>
             <td>15:05-16:35</td>
             <td>GSIC２階会議室</td>
-            <td>TBA</td>
+            <td>
+                <table class="item_table">
+                    <col width="30%">
+                    <tr>
+                        <td>Jian Guo<br> [@RIKEN R-CCS]</td>
+                        <td>Improving Data Compression with Deep Predictive Neural Network for Time Evolutional Data</td>
+                    </tr>
+                    <tr>
+                        <td>Yosuke Oyama<br> [@Matsuoka Lab]</td>
+                        <td>Toward Training a Large 3D Cosmological CNN with Hybrid Parallelization</td>
+                    </tr>
+                    <tr>
+                        <td>Keisuke Ishikawa<br> [@Shinoda Lab]</td>
+                        <td>INTERSPEECH 2019 ~Review~</td>
+                    </tr>
+            </table>
+            </td>
         </tr>
         <tr>
             <td>09/10</td>
