--- a/Meetings/index.src.html
+++ b/Meetings/index.src.html
@@ -76,7 +76,23 @@
             <td>11/12</td>
             <td>15:05-16:35</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>
+                <table class="item_table">
+                    <col width="30%">
+                    <tr>
+                        <td>Hiroki Nakahara<br>[@Nakahara Lab]</td>
+                        <td>Approximation of convolutional operation and recurrent neural networks (RNNs) for computer vision tasks and its acceleration on FPGA: During my stay in London</td>
+                    </tr>
+                    <tr>
+                        <td>Zarina Rakhimberdina<br> [@Murata Lab]</td>
+                        <td>Linear Graph Convolutional Model for Diagnosing Brain Disorders</td>
+                    </tr>
+                    <tr>
+                        <td>Raden Mu'az Mun'im<br> [@Shinoda Lab]</td>
+                        <td>MaskConvNet: Training Efficient ConvNets from Scratch via Budget-constrained Filter Pruning</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
         <tr>
             <td>10/08</td>
@@ -97,7 +113,7 @@
                         <td>Keisuke Ishikawa<br> [@Shinoda Lab]</td>
                         <td>INTERSPEECH 2019 ~Review~</td>
                     </tr>
-            </table>
+                </table>
             </td>
         </tr>
         <tr>
