Nikola auto commit.
Source commit: 6bed28631e90614932426d7b17fbb68a98820b2b
Nikola version: 8.0.2

--- a/Meetings/index.src.html
+++ b/Meetings/index.src.html
@@ -74,7 +74,7 @@
                 <table class="item_table">
                     <col width="30%">
                     <tr>
-                        <td>Haiga Zen<br>[@Google]</td>
+                        <td>Heiga Zen<br>[@Google]</td>
                         <td>Deep Generative Models for Speech</td>
                     </tr>
                     <tr>
