--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -143,7 +143,7 @@ navbar-dark bg-dark
                 <table class="item_table">
 <col width="30%">
 <tr>
-<td>Haiga Zen<br>[@Google]</td>
+<td>Heiga Zen<br>[@Google]</td>
                         <td>Deep Generative Models for Speech</td>
                     </tr>
 <tr></tr>
