Nikola auto commit.
Source commit: a349cafefcd05fd572a68ca4b5640e545f749e68
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -117,7 +117,16 @@ navbar-dark bg-dark
 <td>01/07</td>
             <td>15:05-16:35</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>
+                <table class="item_table">
+<col width="30%">
+<tr>
+<td>Masato Motomura<br>[@Motomura Lab]</td>
+                        <td>AI Computing Architectures: Recent Works and Future Efforts</td>
+                    </tr>
+<tr></tr>
+</table>
+</td>
         </tr>
 </tbody>
 <section><table class="table">
