Nikola auto commit.
Source commit: b1fce5bac477944c34411427ac7d25f63931b4c0
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -105,7 +105,19 @@ navbar-dark bg-dark
 <td>03/10</td>
             <td>15:05-16:35</td>
             <td>W8E 10F large meeting room</td>
-            <td>TBA</td>
+            <td>
+                <table class="item_table">
+<col width="30%">
+<tr>
+<td>Ikuro Sato<br>[@Denso IT Lab]</td>
+                            <td>Classifier Anonymization Technique for Co-Adaptation Breaking</td>
+                        </tr>
+<tr>
+<td>Hiroki Naganuma<br> [@Yokota Lab]</td>
+                            <td>Trends in Deep Learning Theory at NeurIPS 2019</td>
+                        </tr>
+</table>
+</td>
         </tr>
 <tr>
 <td>02/12</td>
@@ -125,10 +137,6 @@ navbar-dark bg-dark
 <tr>
 <td>Yuki Tanigaki<br> [@AIST]</td>
                         <td>Paper presentation of "NAS-Bench-101: Towards Reproducible Neural Architecture Search"</td>
-                    </tr>
-<tr>
-<td>Lingqi Zhang<br>[@Matsuoka Lab]</td>
-                        <td>A short report of the Beijing trip</td>
                     </tr>
 </table>
 </td>
