Nikola auto commit.
Source commit: 0e72f060dbb199cae80f0b046df1812b58f1e5eb
Nikola version: 8.0.2

--- a/Meetings/index.html
+++ b/Meetings/index.html
@@ -104,7 +104,7 @@ navbar-dark bg-dark
 <tr>
 <td>03/10</td>
             <td>15:05-16:35</td>
-            <td>W8E 10F large meeting room</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
 <col width="30%">
