Nikola auto commit.
Source commit: 0706830aa153fb9458b82f45a3de9a7d322acac7
Nikola version: 8.0.2

--- a/Meetings/Meetings2020/index.html
+++ b/Meetings/Meetings2020/index.html
@@ -162,17 +162,17 @@ navbar-dark bg-dark
 <tr>
 <td>05/12</td>
             <td>15:25-17:05</td>
-            <td>TBD</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
 <col width="30%">
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Ruidong Jin<br>[M2@Murata Lab]</td>
+                            <td>An Application of Bipartite Graph Convolutional Networks on Metropolitan Emergency Medical Service Demand Analysis</td>
                         </tr>
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Ryuta Matsuno<br>[M2@Murata Lab]</td>
+                            <td>Optimizing convolutional kernels of graphs for better performance</td>
                         </tr>
 </table>
 </td>
@@ -180,7 +180,7 @@ navbar-dark bg-dark
 <tr>
 <td>04/14</td>
             <td>15:25-17:05</td>
-            <td>TBD</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
 <col width="30%">
