Nikola auto commit.
Nikola version: 8.0.2

--- a/pages/Meetings/Meetings2020.html
+++ b/pages/Meetings/Meetings2020.html
@@ -67,17 +67,17 @@
         <tr>
             <td>06/09</td>
             <td>15:25-17:05</td>
-            <td>TBD</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
                         <col width="30%">
                         <tr>
-                            <td><br></td>
-                            <td></td>
+                            <td>Mohamed Wahib<br>[@AIST/RWBC-OIL/RIKEN]</td>
+                            <td>Scaling Distributed Deep Learning Workloads beyond the Memory Capacity with KARMA</td>
                         </tr>
                         <tr>
-                            <td><br></td>
-                            <td></td>
+                            <td>Yosuke Oyama<br>[@Matsuoka Lab]</td>
+                            <td>The Case for Strong Scaling in Deep Learning: Training Large 3D CNNs with Hybrid Parallelism</td>
                         </tr>
                     </table>
             </td>
