Nikola auto commit.
Source commit: ced77f48e541b02064bab346634fbbfacb83c405
Nikola version: 8.0.2

--- a/Meetings/Meetings2020/index.html
+++ b/Meetings/Meetings2020/index.html
@@ -126,17 +126,17 @@ navbar-dark bg-dark
 <tr>
 <td>07/14</td>
             <td>15:25-17:05</td>
-            <td>TBD</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
 <col width="30%">
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Hanna Hoshino<br>[@Yokota Lab]</td>
+                            <td>Towards reproducible and reliable experiments: Weights and Biases</td>
                         </tr>
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Shun Iwase<br>[@Yokota Lab]</td>
+                            <td>RePOSE: Render-and-Compare Iterative Pose Refinement Network for 6DoF Pose Estimation</td>
                         </tr>
 </table>
 </td>
