Nikola auto commit.
Source commit: e856d20e87b7be6c28a21a4d966361ebb1907d77
Nikola version: 8.0.2

--- a/Meetings/Meetings2020/index.html
+++ b/Meetings/Meetings2020/index.html
@@ -108,17 +108,17 @@ navbar-dark bg-dark
 <tr>
 <td>08/11</td>
             <td>15:25-17:05</td>
-            <td>TBD</td>
+            <td>online (see announcement mail)</td>
             <td>
                 <table class="item_table">
 <col width="30%">
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Atsushi Nitanda<br>[@U-Tokyo]</td>
+                            <td>Optimization of neural networks in function spaces</td>
                         </tr>
 <tr>
-<td><br></td>
-                            <td></td>
+<td>Kenta Oono<br>[@Susuki Lab/PFN]</td>
+                            <td>Theoretical analysis of graph neural networks---expressive power, optimization and generalization</td>
                         </tr>
 </table>
 </td>
